feat: update RecoveryUserDto and UpdateUserDto to include name, password, and phones fields for enhanced user management